[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fglib2"
authors = [
    { name="Tom Schierenbeck", email="tom_sch@uni-bremen.de" },
    { name="Abdelrhman Bassiouny", email="abassiou@uni-bremen.de"},
    {name="Alessandro Santonicola", email="ale_san@uni-bremen.de"}

]
description = "Factor Graphs for probabilistic reasoning"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords=["probabilistic graphical models", "factor graphs", "belief propagation", "sum product",
    "probabilistic machine learning", "probability theory", "variables", "reasoning under uncertainty"]
dynamic = ["version", "dependencies"]

[project.urls]
"Source" = 'https://github.com/tomsch420/fglib2'
"Bug Tracker" = 'https://github.com/tomsch420/fglib2/issues'

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["fglib2*"]

[tool.setuptools.dynamic]
version = {attr = "fglib2.__version__"}
dependencies = {file = "requirements.txt"}
